@@ -1,6 +1,9 @@
 next version
 ----------------
 
+- fix issue27: provide full list of pypi names in root/pypi's simple
+  view (and simple pages from inheriting indices)
+
 - default to "eventlet" server when creating deployment with --gendeploy
 
 - fix issue25: return 403 Forbidden when trying to delete the root user.
